# RAFCON

./: .buildbot.yaml  .bumpversion.cfg  .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  .zenodo.json  AUTHORS  CHANGELOG.rst  CITATION.cff  CLA_entities.rst  CLA_individuals.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Changelog.rst  Gemfile  Jenkinsfile  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  RMC-Jenkinsfile  _config.yml  about.html  build_conan.sh  compile_scss.sh  conanfile.py  contact.html  dialog_new.py  documentation.html  flowc.pt  get_involved.html  get_involved.md  getting_started.html  impressum.html  impressum.md  (+21 more)
source/: .gitignore  pyproject.toml
source/awesome_server/connections/: connection_manager.py  html_network_controller.py  tcp_connection.py  udp_connection.py
source/awesome_server/html_files/: index.html
source/awesome_server/mvc/: main.py
source/awesome_server/statemachine/: config.py  data_flow.py  data_port.py  global_variable_manager.py  id_generator.py  interface.py  library_manager.py  outcome.py  scope.py  script.py  singleton.py  state_machine.py  state_machine_manager.py  transition.py
source/awesome_server/utils/: config.py  constants.py  helper.py  messaging.py  storage_utils.py
source/awesome_tool/: __init__.py  conf.py  index.rst  sphinx_howto
source/awesome_tool/mvc/: 99_bottles_of_beer.py  backward_step_sms.py  basic_turtle_state_machine.py  clipboard.py  config.py  config_gui.py  config_network.py  empty_statemachine.py  generate_demo_libraries.py  generate_turtle_libraries.py  gui_config.yaml  gui_helper.py  history.py  hungry_turtle_state_machine.py  main.py  mvc.rst  runtime_config.py  selection.py  shortcut_manager.py  shortcuts.txt  singleton.py  start.py  statemachine_helper.py  turtle_demo.py
source/awesome_tool/network/: config_network.py  enums.py  html_network_controller.py  network_connections.py  network_controller.py  network_messaging.py  singleton.py  tcp_connection.py  udp_connection.py
source/awesome_tool/statemachine/: __init__.py  config.py  config.yaml  container_state.py  core_main.py  data_flow.py  data_port.py  enums.py  execution_history.py  global_variable_manager.py  id_generator.py  interface.py  library_manager.py  main.py  outcome.py  scope.py  scope_variable.py  script.py  singleton.py  state.py  state_machine.py  state_machine_manager.py  statemachine_status.py  transition.py  turtle_demo.py  validity_checker.py
source/awesome_tool/utils/: checksum.py  config.py  constants.py  geometry.py  helper.py  id_generator.py  log.py  message.py  messaging.py  storage_utils.py  type_helpers.py  vividict.py
source/examples/: basic_turtle_state_machine.py
source/install_scripts/: README.txt  python_lib_install.sh  sys_lib_install.sh
source/network/: communication_endpoint.py  config.py  log.py  main.py  network_config.yaml  protocol.py  test.py  test_acknowledged_messages.py  test_non_acknowledged_messages.py  test_protocol.py  udp_client.py  udp_server.py
source/plugins/: __init__.py
source/plugins/monitoring/: __init__.py  client.py  monitoring_execution_engine.py  monitoring_manager.py  monitoring_menu_bar.py  server.py
source/pycharmSphinxTest/: HowTo  conf.py  index.rst
source/pycharmSphinxTest/an_example_pypi_project/: useful_1.py  useful_2.py
source/rafcon/: .update-copyright.conf  AUTHORS  __init__.py  __main__.py  clean_documentation.sh  conf.py  index.rst  logging.conf  pylintrc  sphinx_howto
source/rafcon/core/: __init__.py  config.py  config.yaml  constants.py  custom_exceptions.py  decorators.py  default_script.py  global_variable_manager.py  id_generator.py  interface.py  library_manager.py  script.py  singleton.py  start.py  state_machine.py  state_machine_manager.py
source/rafcon/design_patterns/: singleton.py
source/rafcon/gui/: __init__.py  (+15 more)
source/rafcon_server/: __init__.py
source/run_scripts/: awesome_tool_bashrc  awesome_tool_bashrc_32_bit  awesome_tool_bashrc_64_bit  ln_config.lnc
source/sphinxTestProject/: .buildinfo  HowTo  conf.py  index.rst
source/test/: README  conftest.py  test_all.py  test_basic_statemachine.py  test_concurrency_barrier_state.py  test_concurrency_barrier_state_execution.py  test_custom_entry_point.py  test_default_data_port_values.py  test_error_propagation.py  test_example.py  test_execute_script_returns_none.py  test_external_modules.py  test_global_variables.py  test_gui_menu_bar.py  test_gvm.py  test_hierarchy_state_execution.py  test_load_save_and_run_libraries.py  test_messages.py  test_models.py  test_notifications.py  test_preemption_behaviour.py  test_preemptive_barrier_state_exexution.py  test_preemptive_wait.py  test_scoped_data.py  test_scoped_variables.py  test_start_stop_step.py  test_state_type_change.py  test_transition_creation.py  test_utils.py  test_z_backward_stepping.py  test_z_gui_menu_bar.py  test_z_gui_state_type_change.py  test_z_gui_states_editor_widget.py  test_z_state_type_change.py  test_z_storage.py  test_zy_history.py  testing_utils.py  variables_for_pytest.py
source/test_scripts/: concurrence_barrier1.py  concurrence_barrier2.py  concurrence_preemption1.py  concurrence_preemption2.py  concurrency_barrier1.py  concurrency_barrier2.py  concurrency_container.py  decider_state.py  default_data_port_test_state.py  external_module_test.py  external_module_test2.py  external_module_test_state.py  first_execution_state.py  first_state.py  global_variable_state.py  global_variable_test_state.py  hello_world_sleep.py  hello_world_write_global_variable.py  hierarchy_container.py  hierarchy_state.py  library_execution_state1.py  library_execution_state2.py  library_hierarchy_state.py  loop_state1.py  loop_state2.py  preemptive_wait_test.py  ros_external_module.py  ros_test_state.py  saved_data_port  saved_state  scoped_data_test_state1.py  scoped_data_test_state2.py  scoped_variable_hierarchy_state.py  scoped_variable_test_state.py  second_state.py  test_hierarchy_module.py  test_module.py  user_input.glade  user_input_external_module.py
(+4423 files in other folders)
