[project]
name = "rafcon"
version = "2.3.0" # Handled by bump2version
description = "Develop your robotic tasks with hierarchical state machines using an intuitive graphical user interface"
keywords = ["state machine", "robotic", "FSM", "development", "GUI", "visual programming"]
readme = "README.rst"
authors = [
    {name = "Sebastian Brunner", email = "sebastian.brunner@dlr.de"},
    {name = "Rico Belder", email = "rico.belder@dlr.de"},
    {name = "Franz Steinmetz", email = "franz.steinmetz@dlr.de"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 1.0 (EPL-1.0)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "wrapt (>=1.14.0,<2.0.0)",
    "astroid (>=2.15.8,<4.0.0)",
    "gaphas (>=2.1.0,<2.2.0)",
    "jsonconversion (>=1.1.0,<2.0.0)",
    "psutil (>=5.0.0,<6.0.0)",
    "pycairo (>=1.11.0,<2.0.0)",
    "pylint (>=2.11.0,<4.0.0)",
    "simplegeneric (>=0.5.0,<1.0.0)",
    "numpy (>=1.23,<3.0)",
    "pandas (>=1.2.0,<2.0.0)",
    "yaml_configuration (>=0.2.5,<0.4.0)",
    "PyGObject (>=3.42.0,<3.51.0)",

    # Add setuptools for distutils if python>=3.12
    "setuptools; python_version >= '3.12'",
]
license = {text = "EPL"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/DLR-RM/RAFCON"

[tool.pdm.dev-dependencies]
dev = [
    "attrs >=22.2.0",
    "graphviz >=0.18.2",
    "matplotlib (>=3.9,<4.0)",
    "monitoring >=0.9.12",
    "objgraph >=3.5.0",
    "profiling (>=0.1.3) ; python_version < '3.11'",
    "pyuserinput >=0.1.11",
    "pytest-faulthandler >=1.6.0",
    "pytest-mock (>=1.9.0,<3)",
    "pytest-timeout",
    "pytest (>=6.0.0,<7.0.0)",
    "libsass",
    "coverage",
    "tox >=3.28.0",
    "bump2version >=1.0.1",
]

[tool.pdm.build]
package-dir = "source"
includes = ["source/rafcon"]
excludes = ["source/rafcon/share/ln", "source/rafcon/share/themes/RAFCON/templates", "tests"]

[tool.pdm.scripts]
pre_build.shell = """
python3 pre_build.py
"""

[project.scripts]
rafcon_core = "rafcon.core.start:main"

[project.gui-scripts]
rafcon = "rafcon.gui.start:main"
rafcon_execution_log_viewer = "rafcon.gui.execution_log_viewer:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
