[project]
authors = [
    {name = "Sebastian Brunner", email = "sebastian.brunner@dlr.de"},
    {name = "Rico Belder", email = "rico.belder@dlr.de"},
    {name = "Franz Steinmetz <franz.steinmetz@dlr.de"},
]
license = {text = "EPL-1.0"}
requires-python = ">=3.7,<4.0"
dependencies = [
    "yaml-configuration<1.0.0,>=0.2.5",
    "numpy==1.19.5; python_version < \"3.7\"",
    "numpy==1.21.6; python_version >= \"3.7\" and python_full_version < \"3.7.1\"",
    "numpy<2.0.0,>=1.22.4; python_version >= \"3.8\" and python_version < \"4.0\"",
    "pandas==1.1.5; python_full_version < \"3.7.1\"",
    "pandas<2.0.0,>=1.2.0; python_full_version >= \"3.7.1\"",
    "simplegeneric<1.0.0,>=0.5.0",
    "psutil<6.0.0,>=5.0.0",
    "jsonconversion<1.0.0,>=0.2.13",
]
name = "rafcon-core"
version = "2.1.4" # Handled by bump2version
description = "Develop your robotic tasks with hierarchical state machines"
keywords = [
    "state machine",
    "robotics",
    "FSM",
    "development",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 1.0 (EPL-1.0)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/DLR-RM/RAFCON"
Changelog = "https://github.com/DLR-RM/RAFCON/blob/master/CONTRIBUTING.md"
Contributing = "https://github.com/DLR-RM/RAFCON/blob/master/CONTRIBUTING.md"
documentation = "https://rafcon.readthedocs.io/en/latest/index.html"

[project.scripts]
rafcon_core = "rafcon.core.start:main"

[tool.pdm.build]
includes = [
    "rafcon",
]
excludes = [
    "rafcon/gui",
    "rafcon/share",
    "rafcon/design_patterns/mvc",
    "rafcon/__main__.py",
    "pylintrc",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
