[project]
authors = [
    {name = "Sebastian Brunner", email = "sebastian.brunner@dlr.de"},
    {name = "Rico Belder", email = "rico.belder@dlr.de"},
    {name = "Franz Steinmetz <franz.steinmetz@dlr.de"},
]
license = {text = "EPL-1.0"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "yaml_configuration (>=0.2.5,<0.3.0)",
    "numpy (>=1.23,<3.0)",
    "pandas (>=1.2.0,<2.0.0)",
    "simplegeneric (>=0.5.0,<1.0.0)",
    "psutil (>=5.0.0,<6.0.0)",
    "jsonconversion (>=1.1.0,<2.0.0)",
]
name = "rafcon-core"
version = "2.3.1" # Handled by bump2version
description = "Develop your robotic tasks with hierarchical state machines"
keywords = [
    "state machine",
    "robotics",
    "FSM",
    "development",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 1.0 (EPL-1.0)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/DLR-RM/RAFCON"
Changelog = "https://github.com/DLR-RM/RAFCON/blob/master/CONTRIBUTING.md"
Contributing = "https://github.com/DLR-RM/RAFCON/blob/master/CONTRIBUTING.md"
documentation = "https://rafcon.readthedocs.io/en/latest/index.html"

[project.scripts]
rafcon_core = "rafcon.core.start:main"

[tool.pdm.build]
includes = [
    "rafcon",
]
excludes = [
    "rafcon/gui",
    "rafcon/share",
    "rafcon/design_patterns/mvc",
    "rafcon/__main__.py",
    "pylintrc",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
